syntax = "proto3";

option go_package = "./grpc";

service Raft {
    rpc ApplyLog(ApplyRequest) returns (ApplyResponse) {}
    rpc GetDetails(GetDetailsRequest) returns (GetDetailsResponse) {}
}

message GetDetailsRequest {
}

message GetDetailsResponse {
    string serverId = 1;
    string raftState = 2;
    string leader = 3;
    int32 raftPort = 4;
    int32 discoveryPort = 5;
	int32 httpPort = 6;
}

message ApplyRequest {
    bytes request = 1;
}

message ApplyResponse {
    bytes response = 1;
}